<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.calendartasks.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/title"
            android:text="@string/titleTask"/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnAddTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnChangeTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change" />

            <Button
                android:id="@+id/btnRemoveTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />
        </LinearLayout>

        <TextView
            style="@style/title"
            android:text="@string/titleCategory"/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnChangeCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change" />

            <Button
                android:id="@+id/btnRemoveCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
